erDiagram
    Alumno{
        int id_alumno pk
        str nombre
        str apellido
        str dni
        str email
        int anio_universitario
    }
    Materia{
        int sigla pk
        int nivel
        str tipo_Materia
        int ciclo_lectivo
        int id_inscripcion fk

    }
    Curso{
        int id_curso pk
        str nombre
        str nivel
        int numero
    }
    Materia_Curso{
        int id_materia_curso pk
        int sigla fk
        int id_curso fk
        str turno_cursado
        str horario
        str modulo
        str grupo
    }
    Inscripcion{
        int id_codigo_alfanumerico pk
        int id_alumno fk
        str estado
        str descripcion
    }
    Alumno_Curso{
        int id_alumno_curso pk
        int id_alumno fk
        int id_curso fk
    }
    Evaluacion{
        int id_evaluacion pk
        int nota
        str comentario
        str tipo_evaluacion fk
        date fecha
        str Condicion_Final fk
    }
    Tipo_Evaluacion{
        int id_tipo_evaluacion pk
        str nombre
        str descripcion
    }
    Condicion_Final{
        int id_condicion_final pk
        int id_alumno fk
        str Condicion
        date fecha
        int id_profesor fk
    }
    Profesor{
        int id_profesor pk
        str nombre
        str apellido
    }
    Curso_Profesor{
        int id_curso_profesor pk
        int id_curso fk
        int id_profesor fk
        str email
    }
    Alumno_Materia_Curso{
        int id_alumno_materia_curso pk
        int id_alumno fk
        int id_materia_curso fk
    }

    Alumno ||--o{ Inscripcion : realiza
    Alumno ||--o{ Alumno_Curso : cursa
    Alumno ||--o{ Condicion_Final : genera
    Alumno ||--o{ Alumno_Materia_Curso : cursa
    Alumno_Materia_Curso }o--|| Materia_Curso : pertenece
    Inscripcion ||--o{ Materia : tiene
    Materia ||--o{ Materia_Curso : pertenece
    Curso ||--o{ Materia_Curso : tiene
    Curso ||--o{ Curso_Profesor : imparte
    Profesor ||--o{ Curso_Profesor : da
    Alumno_Curso }o--|| Curso : asiste
    Condicion_Final ||--o{ Evaluacion : tiene
    Evaluacion }o--|| Tipo_Evaluacion  : clasifica
    Condicion_Final }o--|| Profesor : realiza
    
    
   